<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/label_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_light"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/label_proximity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_proximity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_light"
        />

    <TextView
        android:id="@+id/label_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_accelerometer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_proximity"
        />
    <TextView
        android:id="@+id/label_linear_acceleration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_linear_acceleration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_accelerometer"
        />

    <TextView
        android:id="@+id/label_gyroscope"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gyroscope"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_linear_acceleration"
        />

    <TextView
        android:id="@+id/label_rotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_rotation"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_gyroscope"
        />

    <TextView
        android:id="@+id/label_gravity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gravity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_rotation"
        />

    <TextView
        android:id="@+id/label_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_gps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_gravity"
        />
    <TextView
        android:id="@+id/label_barometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_barometer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_gps"
        />
    <!--ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="@+id/label_proximity"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TextView
            android:id="@+id/sensor_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(placeholder)"
            >

        </TextView>
    </ScrollView-->


</androidx.constraintlayout.widget.ConstraintLayout>